--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "git": "^0.1.5",
