--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-router": "^6.22.0",
     "react-router-dom": "^6.22.1",
+    "react-toastify": "^10.0.5",
     "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
