--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "@heroicons/react": "^2.1.1",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.7",
-    "bcrypt": "^5.1.1",
-    "git": "^0.1.5",
+    "jwt-decode": "^4.0.0",
     "nodemon": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
